public interface HostileAnimalInterface{
    public void Fight();
    public bool Scare();
}