@startuml

abstract class Animal {
    void : PlayAnimalSound() 
}

abstract class FriendlyAnimal {

}

class Dog {
   
}

class Pig {
   
}

interface FriendlyAnimalInterface {
    void : Pet()
    void : Feed()
}

interface HostileAnimalInterface {
    void : Fight()
    bool : Scare()
}

FriendlyAnimal -up-|> FriendlyAnimalInterface
FriendlyAnimal -up-|> Animal
Dog -up-|> FriendlyAnimal
Pig -up-|> FriendlyAnimal


@enduml

